<resources>
    <string name="app_name">Sigimera - Crises</string>
    <string name="about">About</string>
    <string name="logo_description">Sigimera Logo</string>
    <string name="crisis_type_logo_description">Sigimera Logo</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_refresh">Update Location</string>
    <string name="menu_unregister">Unregister Device</string>
    <string name="menu_search">Search crisis</string>
    <string name="menu_share">Share crisis</string>
       	
    <string name="email_text">Enter your e-mail</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="crisis_details_button">Crisis details</string>
    
    <!-- Activities -->
    <string name="title_activity_main">Crises</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_crises_list">Crises List</string>
    <string name="title_activity_crisis">Crisis Info</string>
	<string name="title_activity_map">Crisis Map</string>   
	<string name="title_crisis_alert_activity">Crisis Alert</string>
    
    <!-- Develop credentials -->
    <string name="dev_username">johndoe@example.org</string>
    <string name="dev_password">testing</string>
    
     <string name="account_link"><a href="https://www.sigimera.org/register">Create an account</a></string>
     <string name="help_text">Login or create an account for beneficiation of full support</string>
    
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>