<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
    <item
        android:id="@+id/menu_unregister"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_unregister"/>
    
    <item 
        android:id="@+id/menu_search"
        android:showAsAction="always"
        android:icon="@drawable/navigation_refresh" />
</menu>